// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`references aliased duplicate provider with var reference typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { TerraformVariable, TerraformStack } from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { Auth0Provider } from "./.gen/providers/auth0/lib/provider";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    const clientId = new TerraformVariable(this, "client_id", {
      description: "A client_id",
    });
    const clientSecret = new TerraformVariable(this, "client_secret", {
      description: "A client_secret",
    });
    const domain = new TerraformVariable(this, "domain", {
      description: "A domain",
    });
    new Auth0Provider(this, "auth0", {
      clientId: clientId.stringValue,
      clientSecret: clientSecret.stringValue,
      domain: domain.stringValue,
    });
    new Auth0Provider(this, "auth0_4", {
      alias: "private_auth0",
      clientId: clientId.stringValue,
      clientSecret: clientSecret.stringValue,
      debug: true,
      domain: domain.stringValue,
    });
  }
}
"
`;

exports[`references data local_file typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { TerraformStack } from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { DataLocalFile } from "./.gen/providers/local/lib/dataLocalFile";
import { LocalProvider } from "./.gen/providers/local/lib/provider";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new LocalProvider(this, "local", {});
    new DataLocalFile(this, "_01_please_verify", {
      filename: "./email_templates/01_please_verify/template.html",
    });
  }
}
"
`;

exports[`references data references typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { VariableType, TerraformVariable, Token, TerraformStack } from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { DataAwsS3Bucket } from "./.gen/providers/aws/lib/dataAwsS3Bucket";
import { AwsProvider } from "./.gen/providers/aws/lib/provider";
import { S3BucketObject } from "./.gen/providers/aws/lib/s3BucketObject";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    new AwsProvider(this, "aws", {
      region: "us-east-1",
    });
    const bucketName = new TerraformVariable(this, "bucket_name", {
      default: "demo",
      type: VariableType.STRING,
    });
    const dataAwsS3BucketExamplebucket = new DataAwsS3Bucket(
      this,
      "examplebucket",
      {
        bucket: bucketName.stringValue,
      }
    );
    new S3BucketObject(this, "examplebucket_object", {
      bucket: Token.asString(dataAwsS3BucketExamplebucket.arn),
      key: "someobject",
      source: "index.html",
    });
  }
}
"
`;

exports[`references double references typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { VariableType, TerraformVariable, TerraformStack } from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { AwsProvider } from "./.gen/providers/aws/lib/provider";
import { S3Bucket } from "./.gen/providers/aws/lib/s3Bucket";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    new AwsProvider(this, "aws", {
      region: "us-east-1",
    });
    const bucketName = new TerraformVariable(this, "bucket_name", {
      default: "demo",
      type: VariableType.STRING,
    });
    new S3Bucket(this, "examplebucket", {
      acl: "private",
      bucket: bucketName.stringValue,
      tags: {
        "tag-key": bucketName.stringValue,
      },
    });
  }
}
"
`;

exports[`references locals references typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { TerraformStack } from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { AwsProvider } from "./.gen/providers/aws/lib/provider";
import { S3Bucket } from "./.gen/providers/aws/lib/s3Bucket";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new AwsProvider(this, "aws", {
      region: "us-east-1",
    });
    const bucketName = "foo";
    new S3Bucket(this, "examplebucket", {
      acl: "private",
      bucket: bucketName,
    });
  }
}
"
`;

exports[`references provider with var reference typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { TerraformVariable, TerraformStack } from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { Auth0Provider } from "./.gen/providers/auth0/lib/provider";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    const domain = new TerraformVariable(this, "domain", {
      description: "A domain",
    });
    new Auth0Provider(this, "auth0", {
      clientId: "client_id",
      clientSecret: "client_secret",
      domain: domain.stringValue,
    });
  }
}
"
`;

exports[`references resource references typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { Token, TerraformStack } from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { KmsKey } from "./.gen/providers/aws/lib/kmsKey";
import { AwsProvider } from "./.gen/providers/aws/lib/provider";
import { S3Bucket } from "./.gen/providers/aws/lib/s3Bucket";
import { S3BucketObject } from "./.gen/providers/aws/lib/s3BucketObject";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new AwsProvider(this, "aws", {
      region: "us-east-1",
    });
    const awsKmsKeyExamplekms = new KmsKey(this, "examplekms", {
      deletionWindowInDays: 7,
      description: "KMS key 1",
    });
    const awsS3BucketExamplebucket = new S3Bucket(this, "examplebucket", {
      acl: "private",
      bucket: "examplebuckettftest",
    });
    new S3BucketObject(this, "examplebucket_object", {
      bucket: Token.asString(awsS3BucketExamplebucket.id),
      key: "someobject",
      kmsKeyId: Token.asString(awsKmsKeyExamplekms.arn),
      source: "index.html",
    });
  }
}
"
`;

exports[`references resource references with HCL functions typescript snapshot 1`] = `
"import { Construct } from "constructs";
import {
  Token,
  TerraformCount,
  Fn,
  propertyAccess,
  TerraformStack,
} from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { KmsKey } from "./.gen/providers/aws/lib/kmsKey";
import { AwsProvider } from "./.gen/providers/aws/lib/provider";
import { S3Bucket } from "./.gen/providers/aws/lib/s3Bucket";
import { S3BucketObject } from "./.gen/providers/aws/lib/s3BucketObject";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new AwsProvider(this, "aws", {
      region: "us-east-1",
    });
    const awsKmsKeyExamplekms = new KmsKey(this, "examplekms", {
      deletionWindowInDays: 7,
      description: "KMS key 1",
    });
    /*In most cases loops should be handled in the programming language context and 
    not inside of the Terraform context. If you are looping over something external, e.g. a variable or a file input
    you should consider using a for loop. If you are looping over something only known to Terraform, e.g. a result of a data source
    you need to keep this like it is.*/
    const awsS3BucketExamplebucketCount = TerraformCount.of(
      Token.asNumber("2")
    );
    const awsS3BucketExamplebucket = new S3Bucket(this, "examplebucket", {
      acl: "private",
      bucket:
        "examplebuckettftest-\${" + awsS3BucketExamplebucketCount.index + "}",
      count: awsS3BucketExamplebucketCount,
    });
    new S3BucketObject(this, "examplebucket_object", {
      bucket: Token.asString(
        propertyAccess(Fn.element(awsS3BucketExamplebucket, 0), ["id"])
      ),
      key: "someobject",
      kmsKeyId: Token.asString(awsKmsKeyExamplekms.arn),
      source: "index.html",
    });
  }
}
"
`;

exports[`references resources with splat expressions should work typescript snapshot 1`] = `
"import { Construct } from "constructs";
import {
  VariableType,
  TerraformVariable,
  TerraformOutput,
  propertyAccess,
  TerraformStack,
} from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    const keyValuePairs = new TerraformVariable(this, "key_value_pairs", {
      default: [
        {
          bar: "not food",
          foo: "foo",
        },
        {
          bar: "not beer",
          foo: "bar",
        },
      ],
      description: "List of key value pairs",
      type: VariableType.list(
        VariableType.object({
          bar: VariableType.STRING,
          foo: VariableType.STRING,
        })
      ),
    });
    new TerraformOutput(this, "values", {
      value: propertyAccess(keyValuePairs.value, ["*", "bar"]),
    });
  }
}
"
`;

exports[`references variable references typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { VariableType, TerraformVariable, TerraformStack } from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { AwsProvider } from "./.gen/providers/aws/lib/provider";
import { S3Bucket } from "./.gen/providers/aws/lib/s3Bucket";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    new AwsProvider(this, "aws", {
      region: "us-east-1",
    });
    const bucketName = new TerraformVariable(this, "bucket_name", {
      default: "demo",
      type: VariableType.STRING,
    });
    new S3Bucket(this, "examplebucket", {
      acl: "private",
      bucket: bucketName.stringValue,
    });
  }
}
"
`;

exports[`references variables with maps need to use accessor syntax typescript snapshot 1`] = `
"import { Construct } from "constructs";
import {
  VariableType,
  TerraformVariable,
  propertyAccess,
  Token,
  TerraformStack,
} from "cdktf";
/*
 * Provider bindings are generated by running \`cdktf get\`.
 * See https://cdk.tf/provider-generation for more details.
 */
import { Eip } from "./.gen/providers/aws/lib/eip";
import { AwsProvider } from "./.gen/providers/aws/lib/provider";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    /*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
    You can read more about this at https://cdk.tf/variables*/
    new AwsProvider(this, "aws", {
      region: "us-east-1",
    });
    const defaultTags = new TerraformVariable(this, "default_tags", {
      default: [
        {
          project: "Learning Live with AWS & HashiCorp",
        },
      ],
      description: "Map of default tags to apply to resources",
      type: VariableType.map(VariableType.STRING),
    });
    new Eip(this, "nat", {
      tags: {
        Name:
          Token.asString(propertyAccess(defaultTags.value, ["project"])) +
          "-nat-eip",
      },
      vpc: true,
    });
  }
}
"
`;
